--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "alchemy-sdk": "^2.10.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
-    "react-zoom-pan-pinch": "^3.1.0",
-    "web3": "^4.1.1"
+    "react-zoom-pan-pinch": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
