--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
     "react-zoom-pan-pinch": "^3.1.0",
+    "setimmediate": "^1.0.5",
     "wagmi": "^1.4.1",
     "web3": "^4.1.1"
   },
